# tiago_exams

./: .gitignore  README.md  group25(our group’s setup environment).world
group25_tasks/: CMakeLists.txt  package.xml
group25_tasks/config/: waypoints.yaml
group25_tasks/launch/: task1_mapping.launch.py  task2_navigation.launch.py  task3_pick_place.launch.py
group25_tasks/scripts/: task1_exploration.py  task2_aruco_navigation.py  task3_pick_and_place.py
src/launch_pal/: CHANGELOG.rst  README.md  package.xml  setup.py
src/launch_pal/config/: ari_configuration.yaml  omni_base_configuration.yaml  pmb2_configuration.yaml  pmb3_configuration.yaml  robot_configuration.yaml  tiago_configuration.yaml  tiago_dual_configuration.yaml  tiago_pro_configuration.yaml  tiago_sea_configuration.yaml  tiago_sea_dual_configuration.yaml
src/launch_pal/launch_pal/: __init__.py  arg_utils.py  include_utils.py  param_utils.py  robot_utils.py
src/launch_pal/test/: test_include_utils.py
src/pal_gazebo_worlds/launch/: pal_gazebo_exam.launch.py
src/pal_gazebo_worlds/worlds/: empty.world  empty_room.world  eut_kitchen.world  example.world  tabletop_cube.world
src/pal_urdf_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/tiago_simulation/tiago_gazebo/: CMakeLists.txt  package.xml
src/urdf_test/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
tiago_exam/: CMakeLists.txt  package.xml
tiago_exam/launch/: tiago_exam.launch.py  tiago_spawn.launch.py
tiago_exam_worlds/: CMakeLists.txt  package.xml
tiago_exam_worlds/launch/: pal_gazebo.launch.py  pal_gazebo_exam.launch.py
tiago_exam_worlds/models/aruco_cube_exam_id582/: aruco_cube_exam_id582.sdf  model.config
tiago_exam_worlds/models/aruco_cube_exam_id63/: aruco_cube_exam_id63.sdf  model.config
tiago_exam_worlds/models/env_exam_box1/: env_exam_box1.sdf  model.config
tiago_exam_worlds/models/env_exam_box2/: env_exam_box2.sdf  model.config
tiago_exam_worlds/models/env_exam_cylinder1/: env_exam_cylinder1.sdf
tiago_exam_worlds/models/env_exam_cylinder2/: env_exam_cylinder2.sdf
tiago_exam_worlds/models/env_exam_pick_surface/: env_exam_pick_surface.sdf  model.config
tiago_exam_worlds/models/env_exam_place_surface/: env_exam_place_surface.sdf  model.config
tiago_exam_worlds/worlds/: example.world
(+62 files in other folders)
