<?xml version="1.0"?>
<package format="3">
  <name>group25_tasks</name>
  <version>1.0.0</version>
  <description>Group 25 exam project: SLAM, navigation, and pick-and-place for TIAGo</description>
  <maintainer email="group25@unibo.it">Group 25</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>tiago_2dnav</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
